# Dankune

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Game/: CMakeLists.txt
Game/Source/: main.cpp
Game/Source/Engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  Engine.cpp  Engine.h  InputManager.cpp  InputManager.h  Keys.h  LevelEditor.cpp  LevelEditor.h  MathInclude.h  Object.h  RenderContext.cpp  RenderContext.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  Window.cpp  Window.h
Game/Source/Game/: Entity_Player.h
Game/resources/maps/: world_01.map  world_02.map
Game/resources/shaders/: core.glslh  shader.frag  shader.vert
